--- a/test.html
+++ b/test.html
@@ -6,10 +6,20 @@
     <link rel="stylesheet" href="test.css">
 </head>
 <body>
+    <!--Quiz page-->
     <div class="wrapper">
-        <header class="header">Japan</header>
 
-        <article class="main">
+        <!--Header with title and timer-->
+        <header>
+            <div class="title">Japan</div>
+            <div class="timer">
+                <div class="time_text">Time Left</time>
+                <div class="time_sec">15</time>
+            </div>
+        </header>
+
+        <!--Section with question and answers-->
+        <section>
             <div class="question">
                 <p>kdjflajdflajdflajdfladjfdj</p>
             </div>
@@ -24,15 +34,19 @@
                     <p>ciao</p>
                 </div>
             </div>
-        </article>
-
+        </section>
+        
+        <!--Aside 1-->
         <aside class="aside aside-1">
-            <img class="left" src="japan-left.png"></div>
+            <img class="left" src="japan-left.png">
         </aside>
+
+        <!--Aside 2-->
         <aside class="aside aside-2">
             <img class="right" src="japan-right.png">
         </aside>
 
+        <!--Footer with next button-->
         <footer class="footer">Footer</footer>
     </div>
 </body>
