--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <article>
         <p>Do you love travelling and think you know the world inside out?</p>
         <p>Test yourself with this questions quiz</p>
-        <a href="quiz-q1.html"> 
-            <button class="startBtn" target="_blank" role="button">START</button></a>
+        <button class="startBtn">Next Question</button>
     </article> 
 </body>
 </html>
